# NeuroPy

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  pyrefly.toml  pyrightconfig.json  requirements.txt
.cursor/plans/: implement_trajectory_simplification_function_7a4063e5.plan.md
.dvc/: config
.github/workflows/: python-package.yml
neuropy/analyses/: __init__.py  artifact.py  decoders.py  laps.py  placefields.py  time_bin_aggregation.py  time_dependent_placefields.py
neuropy/core/: __init__.py  clusterless_spike_events.py  datawriter.py  epoch.py  flattened_spiketrains.py  laps.py  neuron_identities.py  neurons.py  parameters.py  position.py  probe.py  ratemap.py  signal.py  user_annotations.py
neuropy/core/session/: SessionSelectionAndFiltering.py  dataSession.py  data_session_loader.py  init_from_raw_data.py
neuropy/io/: binarysignalio.py  neuroscopeio.py  openephysio.py  optitrackio.py  phyio.py  spykingcircusio.py
neuropy/plotting/: __init__.py  figure.py  placemaps.py  ratemaps.py  signals.py  spikes.py
neuropy/utils/: ccg.py  colors_util.py  efficient_interval_search.py  indexing_helpers.py  mathutil.py  matplotlib_helpers.py  misc.py  neurons_util.py  npy_pickle_compat.py  position_util.py  print_helpers.py  probability_downsampling.py  result_context.py  signal_process.py  type_aliases.py
neuropy/utils/mixins/: AttrsClassHelpers.py  HDF5_representable.py  binning_helpers.py  dataframe_representable.py  dict_representable.py  dynamic_conformance_updating_mixin.py  indexing_helpers.py  (+6 more)
notebooks/: pho_NeuroPy_pipeline.ipynb
tests/: test_clusterless_spike_events.py  test_contexts.py  test_decoders.py  test_decoders_synthetic.py  test_efficient_interval_search.py  test_epochs.py  test_neurons_metadata.py  test_npy_pickle_compat.py  test_nwb_data_session_format.py  test_position.py  test_prob_downsampler.py  test_prob_downsampler_discrete_pmf.py  test_shapely_valid_epochs.py  test_utils.py
(+40 files in other folders)
