[project]
name = "neuropy"
version = "0.2.7"
description = "package is primarily developed for hippocampal recordings, but can also be used for general ephys data."
authors = [
    { name = "Bapun Giri", email = "bapung@umich.edu" },
    { name = "Pho Hale", email = "halechr@umich.edu" },
    { name = "Nat Kinsky", email = "nkinsky@umich.edu" },
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "hdf5storage>=0.1.19,<0.2",
    "python-benedict>=0.28.3,<0.29",
    "h5py>=3.8.0,<4",
    "numpy~=1.20",
    "scipy~=1.6",
    "pandas==1.5.3",
    "joblib>=1.2.0,<2",
    "scikit-learn>=1.2.1,<2",
    "scikit-posthocs>=0.7.0,<0.8",
    "ipywidgets>=8.0.4,<9",
    "seaborn>=0.12.2,<0.13",
    "pingouin>=0.5.3,<0.6",
    "matplotlib>=3.6.3,<4",
    "dill[graph]==0.3.5.1",
    "klepto>=0.2.2,<0.3",
    "vitables>=3.0.2,<4",
    "indexed>=1.3.0,<2",
    "panel>=1.2.3,<2",
    "params>=0.9.0,<0.10",
    "jupyter-bokeh>=3.0.7,<4",
    "urllib3==1.26.18",
    "sphinx-autodoc-typehints>=2.0.0,<3",
    "portion",
    "flexitext",
    "cupy-cuda12x>=13.4.0,<14",
    "nptyping[complete]>=2.5.0,<3",
    "typing-extensions>=4.12.2",
    "umap-learn>=0.5.9.post2",
    "dvc[all]>=3.63.0",
    "numba>=0.57,<0.62",
    "hmmlearn>=0.3.3",
    "rdp>=0.8",
]

[project.optional-dependencies]
gui = ["tqdm>=4.64.1,<5"]
data_version_control = []

[dependency-groups]
dev = [
    "pip~=24.0",
    "ipdb>=0.13.11,<0.14",
    "dvc[gdrive]>=3.59.0,<4",
    "pyrefly>=0.54.0",
    "pytest>=7.2.1,<9",
]

[tool.uv]

[tool.uv.sources]
portion = { git = "https://github.com/CommanderPho/portion.git" }
flexitext = { git = "https://github.com/CommanderPho/flexitext.git", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["neuropy"]
